add repository url

--- a/web_scraping.html
+++ b/web_scraping.html
@@ -51,9 +51,24 @@
             I've developed scraping code using Selenium and Pandas library in Python. I've used Big Query on
             Google Cloud in order to store the information in a dataset.
           </p>
+        <ul class="contact-list">
 
+            <li class="contact-list-item">
+
+              <div class="contact-item-icon">
+                <ion-icon name="logo-github"></ion-icon>
+              </div>
+
+              <div class="wrapper">
+
+                <h3 class="h4 contact-item-title"><a href="https://github.com/bbrzepka/sea_level">Sea Level Repository</a> </h3>
+              </div>
+
+            </li>
+          </ul>
 
         </div>
+        
 
       </section>
 
