fix projects seccion on mobile

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
         <a href = "./deepbeat.html">
         <div class="card-product">
-          <img src="./assets/images/heart.png" />
+          <img src="./assets/images/heart.png" class="w-30" />
           <div class="card-product-infos">
             <h2>DeepBeat AI</h2>
             <p>June 2023</p>
