add api and web skills

--- a/index.html
+++ b/index.html
@@ -256,6 +256,25 @@
               </div>
             </div>
           </li>
+          <li>
+            <div class="skill-card">
+              <div class="tooltip">Fast API</div>
+
+              <div class="card-icon">
+                <img src="./assets/images/fastapi.png" width="48" height="48" alt="Fast API logo">
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="skill-card">
+              <div class="tooltip">Streamlit</div>
+
+              <div class="card-icon">
+                <img src="./assets/images/streamlit.png" width="64" height="48"  alt="Streamlit logo">
+              </div>
+            </div>
+          </li>
         </ul>
 
 
