update logos and personal description

--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
           <p class="section-subtitle">About me</p>
           <p class="section-title">Hi, I am Barbara Rzepka.</p>
           <p class="section-text">
-              I’m an aspiring Data Engineer based in Lisbon. <br>
-              I've started my professional career in 2016 from working as a GIS Analyst and grew with time into becoming Database Developer. <br>
-              The biggest highlight of my professional career has been developing an open-source project for water management called Giswater.<br>
-              Recently I've completed a Data Science Bootcamp, where I gained expertise in data visualisation, machine learning and deep learning using Python.<br>
-              Thanks to my experience in databases, working mostly with spatial data and newly obtained skills I feel confident and ready to start my career as a Data Engineer.
+              I’m a Data Engineer based in Lisbon. <br>
+              I've started my professional career in 2016 working as a GIS Analyst and grew with time into becoming Database Developer. <br>
+              The biggest highlight of that time in my professional career has been developing an open-source project for water management called Giswater.<br>
+              In 2023 I've completed a Data Science Bootcamp, where I gained expertise in data visualisation, machine learning and deep learning using Python.<br>
+              Thanks to my experience in managing databases, working mostly with spatial data, and newly obtained skills,
+              the journey led me to transition into data engineering, where I integrate my expertise with advanced data processing techniques using the modern data stack.
           </p>
           <ul class="contact-list">
 
@@ -153,7 +154,42 @@
         <div class="skills-box" data-skills-box>
 
           <ul class="skills-list">
+            <li>
+              <div class="skill-card">
+                <div class="tooltip">Snowflake</div>
 
+                <div class="card-icon">
+                  <img src="./assets/images/snowflake.png" width="48" height="48" alt="Snowflake logo">
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="skill-card">
+                <div class="tooltip">DBT</div>
+
+                <div class="card-icon">
+                  <img src="./assets/images/dbt.png" width="48" height="48" alt="DBT logo">
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="skill-card">
+                <div class="tooltip">Fivetran</div>
+
+                <div class="card-icon">
+                  <img src="./assets/images/fivetran.png" width="48" height="48" alt="FIvetran logo">
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="skill-card">
+                <div class="tooltip">Coalesce</div>
+
+                <div class="card-icon">
+                  <img src="./assets/images/coalesce.png" width="58" height="58" alt="Coalesce logo">
+                </div>
+              </div>
+            </li>
             <li>
               <div class="skill-card">
                 <div class="tooltip">Python</div>
@@ -206,15 +242,7 @@
               </div>
             </li>
 
-            <li>
-              <div class="skill-card">
-                <div class="tooltip">Snowflake</div>
 
-                <div class="card-icon">
-                  <img src="./assets/images/snowflake.png" width="48" height="48" alt="Snowflake logo">
-                </div>
-              </div>
-            </li>
 
             <li>
               <div class="skill-card">
@@ -318,6 +346,7 @@
           <img src="./assets/images/giswater.png" class="w-30"/>
           <div class="card-product-infos">
             <h2>Giswater</h2>
+            <p>2016 - 2023</p>
           </div>
         </div>
       </a>
